# ping-no-wallet-contract

./: Cargo.toml
contract-test/app/: Cargo.toml
contract-test/app/src/: lib.rs
contract-test/wasm/: Cargo.toml  build.rs
ping-no-wallet/tests/: main_contract_test.rs
sails-ping-no-wallet/app/: Cargo.toml
sails-ping-no-wallet/app/src/: lib.rs
sails-ping-no-wallet/app/src/services/: ping_service.rs  query_service.rs  signless_service.rs
sails-ping-no-wallet/app/src/state_global_variables/: mod.rs  ping_state.rs  signless_accounts.rs
sails-ping-no-wallet/app/src/state_types/: mod.rs  ping_state_type.rs  signless_accounts_state_type.rs
sails-ping-no-wallet/wasm/: Cargo.toml  build.rs  ping_sails.idl
sails-ping-no-wallet/wasm/src/: lib.rs
